--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,14 @@ bind ` send-prefix
 set -g status-bg colour235
 set -g status-fg yellow
 
+# Make mouse useful in copy mode
+setw -g mode-mouse on
+
+# Allow mouse to select which pane to use
+set -g mouse-select-pane on
+
+# Allow mouse dragging to resize panes
+set -g mouse-resize-pane on
+
+# Allow mouse to select windows
+set -g mouse-select-window on
