--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-set -g status-utf8 on
-set -g utf8 on
 set -g history-limit 100000
 
 unbind C-b
@@ -9,14 +7,5 @@ bind ` send-prefix
 set -g status-bg colour235
 set -g status-fg yellow
 
-# Make mouse useful in copy mode
-setw -g mode-mouse on
-
-# Allow mouse to select which pane to use
-set -g mouse-select-pane on
-
-# Allow mouse dragging to resize panes
-set -g mouse-resize-pane on
-
-# Allow mouse to select windows
-set -g mouse-select-window on
+# Mouse mode on!
+setw -g mouse on
