--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g status-fg yellow
 set -g status-right-length 150
 set -g status-right '#($HOME/.tmux/rainbarf/rainbarf) | #{host_short} | %H:%M'
 
-set -g window-status-current-format "#[fg=colour235,bg=colour31,nobold]#[fg=colour117,bg=colour31]#I:#W #[fg=colour31,bg=colour235,nobold]"
+set -g window-status-current-format "#[fg=colour117,bg=colour31] #I:#W "
      
 # Mouse mode on!
 setw -g mouse on
